# powersort

./: Cargo.toml  README.md  power_costs.txt
benches/: extend_run.rs  merge.rs  merge_cost.rs  node_power.rs  powersort.rs  sort_final.rs  standard_library_sort.rs  type_sort.rs
src/: alternatives.rs  benchmark.rs  lib.rs  main.rs  powersort.rs  powersort_alternatives.rs  sequences.rs  sort.rs  sort_final.rs
