[package]
name = "powersort"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "extend_run"
harness = false

[[bench]]
name = "node_power"
harness = false

[[bench]]
name = "powersort"
harness = false

[[bench]]
name = "standard_library_sort"
harness = false

[[bench]]
name = "merge_cost"
harness = false

[[bench]]
name = "type_sort"
harness = false

[[bench]]
name = "sort_final"
harness = false